--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -21,7 +21,7 @@
     <add key="DefaultIndexName" value="hlidacsmluv" />
     <add key="ESDebugDataEnabled" value="true" />
 
-    <add key="KIndex" value="private" />
+    <add key="KIndex" value="" />
     <add key="KIdxIconStyle" value="hranate" />
     
     <add key="webpages:Version" value="3.0.0.0" />
