--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -125,7 +125,7 @@
 
       <remove name="WebDAVModule" />
       <remove name="FormsAuthentication" />
-      <add name="PageTimer" type="Devmasters.Net.Web.HttpModules.PageTimer" preCondition="" />
+      <add name="PageTimer" type="HlidacStatu.Web.Framework.IHttpModules.PageTimer" preCondition="" />
       <remove name="TelemetryCorrelationHttpModule"/>
       <add name="TelemetryCorrelationHttpModule"
         type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation"
