--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -538,6 +538,7 @@
     <Compile Include="Analysis\DataPerYear.cs" />
     <Compile Include="Analysis\ACore.cs" />
     <Compile Include="Analysis\KorupcniRiziko\AdvancedQuery.cs" />
+    <Compile Include="Analysis\KorupcniRiziko\Backup.cs" />
     <Compile Include="Analysis\KorupcniRiziko\Calculator.Indexy.cs" />
     <Compile Include="Analysis\KorupcniRiziko\KIndex.cs" />
     <Compile Include="Analysis\KorupcniRiziko\KIndexData.Annual.cs" />
