--- a/HlidacStatu.Lib.Db.Insolvence/packages.config
+++ b/HlidacStatu.Lib.Db.Insolvence/packages.config
@@ -2,13 +2,14 @@
 <packages>
   <package id="Devmasters.Batch" version="2.1.0" targetFramework="net48" />
   <package id="Devmasters.Collections" version="2.1.1" targetFramework="net48" />
-  <package id="Devmasters.Core" version="2.1.5" targetFramework="net48" />
-  <package id="Devmasters.DT" version="2.1.1" targetFramework="net48" />
+  <package id="Devmasters.Core" version="2.1.6" targetFramework="net48" />
+  <package id="Devmasters.DT" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Lang" version="2.1.0" targetFramework="net48" />
   <package id="Devmasters.Logging" version="2.1.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net48" />
   <package id="log4net" version="2.0.11" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net48" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net48" />
