Graph with tests

--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -626,6 +626,10 @@
     <Compile Include="Data\FirmaHint.cs">
       <DependentUpon>Db.tt</DependentUpon>
     </Compile>
+    <Compile Include="Data\Graphs2\Edge.cs" />
+    <Compile Include="Data\Graphs2\IBindable.cs" />
+    <Compile Include="Data\Graphs2\UnweightedGraph.cs" />
+    <Compile Include="Data\Graphs2\Vertex.cs" />
     <Compile Include="Data\Graphs\Graph.cs" />
     <Compile Include="Data\Firma.Ciselniky.cs" />
     <Compile Include="Data\Graphs\Graph.Edge.cs" />
