--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1701,6 +1701,8 @@
     <Content Include="Views\Home\KapacitaNemocnic.cshtml" />
     <Content Include="Views\Home\KapacitaNemocnic_child.cshtml" />
     <Content Include="Views\Home\Reports\99_COVID_Umrti.cshtml" />
+    <Content Include="Views\Home\err500.cshtml" />
+    <Content Include="Views\Home\err500hack.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
