--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1703,6 +1703,7 @@
     <Content Include="Views\Home\Reports\99_COVID_Umrti.cshtml" />
     <Content Include="Views\Home\err500.cshtml" />
     <Content Include="Views\Home\err500hack.cshtml" />
+    <Content Include="Views\Manage\AddKindexFeedback.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
