--- a/DBUpgrader/DBUpgrader.csproj
+++ b/DBUpgrader/DBUpgrader.csproj
@@ -242,6 +242,7 @@
     <Compile Include="V1\UpgradeDB.1.0.0.028.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.045.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.062.cs" />
+    <Compile Include="V1\UpgradeDB.1.0.0.074.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.073.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.072.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.071.cs" />
