Adding Latest Season Statistic

--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -537,6 +537,7 @@
     <Compile Include="Analysis\BasicDataPerYear.cs" />
     <Compile Include="Analysis\DataPerYear.cs" />
     <Compile Include="Analysis\ACore.cs" />
+    <Compile Include="Analysis\ContractsStatisticData.cs" />
     <Compile Include="Analysis\KorupcniRiziko\AdvancedQuery.cs" />
     <Compile Include="Analysis\KorupcniRiziko\Backup.cs" />
     <Compile Include="Analysis\KorupcniRiziko\Calculator.Indexy.cs" />
