--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1709,8 +1709,9 @@
     <Content Include="Views\Kindex\Backup.cshtml" />
     <Content Include="Views\Home\KapacitaKazdeNemocnice.cshtml" />
     <Content Include="Views\Home\KapacitaKazdeNemocnice_child.cshtml" />
-    <Content Include="Views\Home\Subjekt2_dotace.cshtml" />
+    <Content Include="Views\Home\Subjekt2_Dotace.cshtml" />
     <Content Include="Views\Home\Subjekt2_RightColumn.cshtml" />
+    <Content Include="Views\Home\Subjekt2_RegistrSmluv.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
