--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1712,6 +1712,7 @@
     <Content Include="Views\Home\Subjekt2_Dotace.cshtml" />
     <Content Include="Views\Home\Subjekt2_RightColumn.cshtml" />
     <Content Include="Views\Home\Subjekt2_RegistrSmluv.cshtml" />
+    <Content Include="Views\Home\Subjekt2_VerejneZakazky.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
