--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -11,7 +11,7 @@
   <package id="Devmasters.DT" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Enums" version="2.1.4" targetFramework="net48" />
   <package id="Devmasters.Imaging" version="2.1.0" targetFramework="net48" />
-  <package id="Devmasters.IO" version="2.1.0" targetFramework="net48" />
+  <package id="Devmasters.IO" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Lang" version="2.1.0" targetFramework="net48" />
   <package id="Devmasters.Logging" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Net" version="2.1.3" targetFramework="net48" />
@@ -54,6 +54,7 @@
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="Scriban" version="2.1.3" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.3.0" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
@@ -69,7 +70,6 @@
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
-  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Watcher" version="4.3.0" targetFramework="net472" />
@@ -82,6 +82,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.Caching" version="4.7.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
@@ -97,6 +98,7 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
   <package id="System.Security.Permissions" version="4.7.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net48" />
+  <package id="System.Text.Encoding" version="4.0.10" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net48" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
