--- a/Plugin.Enhancers/packages.config
+++ b/Plugin.Enhancers/packages.config
@@ -4,7 +4,7 @@
   <package id="Devmasters.Collections" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Core" version="2.1.6" targetFramework="net48" />
   <package id="Devmasters.DT" version="2.1.2" targetFramework="net48" />
-  <package id="Devmasters.IO" version="2.1.0" targetFramework="net48" />
+  <package id="Devmasters.IO" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Lang" version="2.1.0" targetFramework="net48" />
   <package id="Devmasters.Logging" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Net" version="2.1.3" targetFramework="net48" />
@@ -18,6 +18,7 @@
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.3.0" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
@@ -28,8 +29,8 @@
   <package id="System.Diagnostics.Process" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.TraceSource" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO" version="4.0.10" targetFramework="net48" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
-  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Watcher" version="4.3.0" targetFramework="net472" />
@@ -42,6 +43,7 @@
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net472" />
+  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net472" />
@@ -52,6 +54,7 @@
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net48" />
   <package id="System.Security.Permissions" version="4.7.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net48" />
+  <package id="System.Text.Encoding" version="4.0.10" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net48" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
