--- a/Util/packages.config
+++ b/Util/packages.config
@@ -3,17 +3,17 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
   <package id="CouchbaseNetClient" version="2.7.18" targetFramework="net472" allowedVersions="(,3.0)" />
-  <package id="Devmasters.Batch" version="2.1.0" targetFramework="net472" />
-  <package id="Devmasters.Cache" version="2.1.2" targetFramework="net472" />
-  <package id="Devmasters.Collections" version="2.1.1" targetFramework="net472" />
-  <package id="Devmasters.Core" version="2.1.6" targetFramework="net472" />
-  <package id="Devmasters.Crypto" version="2.1.0" targetFramework="net472" />
-  <package id="Devmasters.DT" version="2.1.2" targetFramework="net472" />
-  <package id="Devmasters.Enums" version="2.1.4" targetFramework="net472" />
-  <package id="Devmasters.IO" version="2.1.0" targetFramework="net472" />
-  <package id="Devmasters.Lang" version="2.1.0" targetFramework="net472" />
-  <package id="Devmasters.Logging" version="2.1.1" targetFramework="net472" />
-  <package id="Devmasters.Net" version="2.1.3" targetFramework="net472" />
+  <package id="Devmasters.Batch" version="2.1.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Cache" version="2.1.2" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Collections" version="2.1.1" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Core" version="2.1.6" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Crypto" version="2.1.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.DT" version="2.1.2" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Enums" version="2.1.4" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.IO" version="2.1.2" targetFramework="net48" />
+  <package id="Devmasters.Lang" version="2.1.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Logging" version="2.1.1" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Net" version="2.1.3" targetFramework="net472" requireReinstallation="true" />
   <package id="Elasticsearch.Net" version="7.8.2" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net472" />
   <package id="IPNetwork2" version="2.5.226" targetFramework="net472" />
@@ -33,20 +33,29 @@
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="OpenTracing" version="0.12.1" targetFramework="net472" />
   <package id="Scriban" version="2.1.3" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
+  <package id="System.IO" version="4.0.10" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
-  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem" version="4.0.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.0.20" targetFramework="net472" />
   <package id="System.Runtime.Caching" version="4.7.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Runtime.Extensions" version="4.0.10" targetFramework="net472" />
+  <package id="System.Runtime.Handles" version="4.0.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="4.7.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
+  <package id="System.Text.Encoding" version="4.0.10" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks" version="4.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="WeCantSpell.Hunspell" version="3.0.1" targetFramework="net472" />
