eAgri deminimis update

--- a/Lib.Data.External/app.config
+++ b/Lib.Data.External/app.config
@@ -146,15 +146,15 @@
           <security mode="Transport" />
         </binding>
         <binding name="rozhraniCRPDPHSOAP1" />
-        <binding name="RDM_INF01BBinding">
+        <binding name="RDM_PUB01BBinding">
           <security mode="Transport" />
         </binding>
-        <binding name="RDM_INF01BBinding1" />
+        <binding name="RDM_PUB01BBinding1" />
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="https://adisrws.mfcr.cz/adistc/axis2/services/rozhraniCRPDPH.rozhraniCRPDPHSOAP" binding="basicHttpBinding" bindingConfiguration="rozhraniCRPDPHSOAP" contract="HlidacSmluv.Lib.Data.External.NespolehlivyPlatceDPH.rozhraniCRPDPH" name="rozhraniCRPDPHSOAP" />
-      <endpoint address="https://eagri.cz/ssl/nosso-app/EPO/WS/v2Online/vOKOsrv.ashx" binding="basicHttpBinding" bindingConfiguration="RDM_INF01BBinding" contract="eAgri.DeMinimis.WS.RDM_INF01B" name="RDM_INF01BPort" />
+      <endpoint address="https://eagri.cz/ssl/nosso-app/EPO/WS/v2Online/vOKOsrv.ashx" binding="basicHttpBinding" bindingConfiguration="RDM_PUB01BBinding" contract="eAgri.DeMinimis.WS.RDM_PUB01B" name="RDM_PUB01BPort" />
     </client>
   </system.serviceModel>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup>
