update list of DS from datoveschranky open data

--- a/Lib.Data.External/Lib.Data.External.csproj
+++ b/Lib.Data.External/Lib.Data.External.csproj
@@ -587,6 +587,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="DatoveSchranky\descriptor.Designer.cs" />
+    <Compile Include="DatoveSchranky\DSList.cs" />
     <Compile Include="DatoveSchranky\ISDS.cs" />
     <Compile Include="Discourse.cs" />
     <Compile Include="eAgri\DeMinimis.Search.cs" />
