--- a/Lib.Analytics/Lib.Analytics.csproj
+++ b/Lib.Analytics/Lib.Analytics.csproj
@@ -93,9 +93,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseData.cs" />
+    <Compile Include="Consts.cs" />
+    <Compile Include="GlobalScale.OrderedList.cs" />
     <Compile Include="PerYear.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="GlobalScale.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Util\Util.csproj">
