--- a/Lib.Analytics/Lib.Analytics.csproj
+++ b/Lib.Analytics/Lib.Analytics.csproj
@@ -94,10 +94,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consts.cs" />
-    <Compile Include="GlobalRank.OrderedList.cs" />
-    <Compile Include="PerYear.cs" />
+    <Compile Include="GlobalStatisticsPerYear.OrderedList.cs" />
+    <Compile Include="SubjectStatisticsPerYear.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GlobalRank.cs" />
+    <Compile Include="GlobalStatisticsPerYear.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Util\Util.csproj">
