--- a/Lib.Analytics/Lib.Analytics.csproj
+++ b/Lib.Analytics/Lib.Analytics.csproj
@@ -94,7 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consts.cs" />
-    <Compile Include="GlobalStatisticsPerYear.OrderedList.cs" />
+    <Compile Include="CalculatedProperty.cs" />
     <Compile Include="SubjectStatisticsPerYear.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GlobalStatisticsPerYear.cs" />
