--- a/Lib.Analytics/Lib.Analytics.csproj
+++ b/Lib.Analytics/Lib.Analytics.csproj
@@ -94,8 +94,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consts.cs" />
-    <Compile Include="CalculatedProperty.cs" />
-    <Compile Include="SubjectStatisticsPerYear.cs" />
+    <Compile Include="PropertyYearPercentiles.cs" />
+    <Compile Include="StatisticsSubjectPerYear.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GlobalStatisticsPerYear.cs" />
   </ItemGroup>
