Extending person event modifications

--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1744,6 +1744,7 @@
     <Content Include="Views\Data\Napoveda.cshtml" />
     <Content Include="Views\Subjekt\OrganizacniStruktura.cshtml" />
     <Content Include="Views\Subjekt\DalsiInformace.cshtml" />
+    <Content Include="Views\Subjekt\EditDirector.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
