--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -4,9 +4,13 @@
   <package id="bootstrap" version="3.4.1" targetFramework="net472" allowedVersions="(,4)" />
   <package id="bootstrap.less" version="3.4.1" targetFramework="net472" allowedVersions="(,4)" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net472" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net48" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net48" />
+  <package id="CouchbaseNetClient" version="2.7.22" targetFramework="net48" />
   <package id="CsvHelper" version="15.0.5" targetFramework="net472" />
   <package id="Devmasters.Batch" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Cache" version="2.1.2" targetFramework="net48" />
+  <package id="Devmasters.Cache.Couchbase" version="2.0.1" targetFramework="net48" />
   <package id="Devmasters.Collections" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Core" version="2.1.6" targetFramework="net48" />
   <package id="Devmasters.Crypto" version="2.1.0" targetFramework="net48" />
@@ -80,6 +84,7 @@
   <package id="NEST" version="7.8.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net472" />
+  <package id="OpenTracing" version="0.12.1" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="RabbitMQ.Client" version="6.1.0" targetFramework="net472" />
