--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="5.2.0" targetFramework="net472" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net48" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net48" />
+  <package id="CouchbaseNetClient" version="2.7.22" targetFramework="net48" />
   <package id="CsvHelper" version="15.0.5" targetFramework="net472" />
   <package id="Devmasters.Batch" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Cache" version="2.1.2" targetFramework="net48" />
-  <package id="Devmasters.Cache.Elastic" version="2.0.2" targetFramework="net48" />
+  <package id="Devmasters.Cache.Couchbase" version="2.0.1" targetFramework="net48" />
+  <package id="Devmasters.Cache.Elastic" version="2.0.3" targetFramework="net48" />
   <package id="Devmasters.Collections" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Core" version="2.1.6" targetFramework="net48" />
   <package id="Devmasters.Crypto" version="2.1.0" targetFramework="net48" />
@@ -53,6 +57,7 @@
   <package id="ObjectsComparer" version="1.4.1" targetFramework="net472" />
   <package id="OpenTK" version="3.2" targetFramework="net472" />
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net472" />
+  <package id="OpenTracing" version="0.12.1" targetFramework="net48" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="Scriban" version="2.1.4" targetFramework="net48" />
   <package id="SharpZipLib" version="1.3.0" targetFramework="net48" />
