--- a/Util/packages.config
+++ b/Util/packages.config
@@ -2,9 +2,10 @@
 <packages>
   <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
-  <package id="CouchbaseNetClient" version="2.7.18" targetFramework="net472" allowedVersions="(,3.0)" />
+  <package id="CouchbaseNetClient" version="2.7.22" targetFramework="net48" allowedVersions="(,3.0)" />
   <package id="Devmasters.Batch" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Cache" version="2.1.2" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Cache.Couchbase" version="2.0.1" targetFramework="net48" />
   <package id="Devmasters.Collections" version="2.1.1" targetFramework="net472" requireReinstallation="true" />
   <package id="Devmasters.Core" version="2.1.6" targetFramework="net472" requireReinstallation="true" />
   <package id="Devmasters.Crypto" version="2.1.0" targetFramework="net472" requireReinstallation="true" />
