--- a/Util/packages.config
+++ b/Util/packages.config
@@ -12,7 +12,7 @@
   <package id="Devmasters.DT" version="2.1.2" targetFramework="net472" requireReinstallation="true" />
   <package id="Devmasters.Enums" version="2.1.4" targetFramework="net472" requireReinstallation="true" />
   <package id="Devmasters.IO" version="2.1.2" targetFramework="net48" />
-  <package id="Devmasters.Lang" version="2.1.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Lang" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Logging" version="2.1.1" targetFramework="net472" requireReinstallation="true" />
   <package id="Devmasters.Net" version="2.1.4" targetFramework="net48" />
   <package id="Elasticsearch.Net" version="7.8.2" targetFramework="net472" />
